Menu latéral et haut

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+<div class="container-fluid" style="padding-left:0;padding-right:0;">
   <app-root></app-root>
+</div>
 </body>
 </html>
