--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
 <app-root></app-root>
 </div>
 </body>
